geo connector test listo